--- a/index.html
+++ b/index.html
@@ -374,56 +374,54 @@
     <!-- Start Footer -->
     <footer>
         <div class="container">
-            <div class="footer">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="footer-left">
-                            <i class="fa-solid fa-graduation-cap fs-3 text-light me-1"></i> <span
-                                class="text-white fs-3">QLearn</span>
-                            <p class="fs-6 my-2 text-white">Follow on social service</p>
-                            <div class="icons d-flex  ">
-                                <a class=" icon one rounded-5  " href="#"> <i
-                                        class="fa-brands fa-facebook text-light"></i></a>
-                                <a class=" icon rounded-5 mx-3  " href="#"><i
-                                        class="fa-brands fa-square-instagram text-light"></i></a>
-                                <a class=" icon rounded-5 " href="#"><i class="fa-brands fa-twitter text-dark"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class=" footer-right col-md-8 d-flex justify-content-between align-items-center ">
-                        <nav class="links">
-
-                            <ul>
-                                <h4>links</h4>
-                                <li><a href="#">Home </a></li>
-                                <li><a href="#">Help center</a></li>
-                                <li><a href="#">Service</a></li>
-                            </ul>
-                        </nav>
-                        <nav class="Resource">
-                            <ul>
-                                <h4>Resource</h4>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Carrier</a></li>
-                                <li><a href="#">Legal Notice</a></li>
-                            </ul>
-                        </nav>
-                        <nav class="Contacts">
-                            <ul>
-                                <h4>Contacts</h4>
-                                <li><a href="#">192. New york</a></li>
-                                <li><a href="#">Support </a></li>
-                                <li><a href="#">+1125156363</a></li>
-                            </ul>
-                        </nav>
+            <div class="footer d-flex justify-content-between">
+                <div class="footer-left">
+                    <i class="fa-solid fa-graduation-cap fs-3 text-light me-1"></i> <span
+                        class="text-white fs-3">QLearn</span>
+                    <p class="fs-6 my-2 text-white">Follow on social service</p>
+                    <div class="icons d-flex align-items-center  ">
+                        <a class=" icon one rounded-5  " href="#"> <i class="fa-brands fa-facebook text-light"></i>
+                        </a>
+                        <a class=" icon rounded-5 mx-3  " href="#"><i
+                                class="fa-brands fa-square-instagram text-light"></i>
+                            </a>
+                        <a class=" icon rounded-5 " href="#"><i class="fa-brands fa-twitter text-dark"></i>
+                        </a>
                     </div>
                 </div>
-                
+                <div class=" footer-right ">
+                    <nav class="links">
+
+                        <ul>
+                            <h4>links</h4>
+                            <li><a href="#">Home </a></li>
+                            <li><a href="#">Help center</a></li>
+                            <li><a href="#">Service</a></li>
+                        </ul>
+                    </nav>
+                    <nav class="Resource">
+                        <ul>
+                            <h4>Resource</h4>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Carrier</a></li>
+                            <li><a href="#">Legal Notice</a></li>
+                        </ul>
+                    </nav>
+                    <nav class="Contacts">
+                        <ul>
+                            <h4>Contacts</h4>
+                            <li><a href="#">192. New york</a></li>
+                            <li><a href="#">Support </a></li>
+                            <li><a href="#">+1125156363</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="copyright text-center text-light  ">
+                <span>&copy; 2023 All rights reserved by Eng.AliSaleh.</span>
             </div>
         </div>
-        <div class="copyright text-center text-light  ">
-            <span>&copy; 2023 All rights reserved by Eng.AliSaleh.</span>
-        </div>
+        
     </footer>
     <!-- Bootstrap -->
     <script src="js/all.min.js"></script>
