--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         <a class=" icon rounded-5 mx-3  " href="#"><i
                                 class="fa-brands fa-square-instagram text-light"></i>
                             </a>
-                        <a class=" icon rounded-5 " href="#"><i class="fa-brands fa-twitter text-dark"></i>
+                        <a class=" icon rounded-5 " href="#"><i class="fa-brands fa-twitter text-light"></i>
                         </a>
                     </div>
                 </div>
